src/objects/AF_Bonus_Results__c.object
<CustomObject>
    <description>Will represent the quantitative and qualitative quarterly and annual bonus figures. There can be one or more bonus input records associated to one brand estimate</description>
    <fields>
        <fullName>AF_Bonus_Thresholds__c</fullName>
        <description>AgencyFee#GLOBAL#To store Bonus Thresholds values  associated to Bonus Thresholds Object</description>
        <label>Bonus Thresholds</label>
        <referenceTo>AF_Bonus_Threshold__c</referenceTo>
        <relationshipLabel>Bonus Results</relationshipLabel>
        <relationshipName>Bonus_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AF_Bonus_Value_Bm__c</fullName>
        <description>AgencyFee#GLOBAL#To store Bonus values associated to Bonus Matrix Object</description>
        <label>Bonus Value</label>
        <summarizedField>AF_Bonus_Matrix__c.AF_Value__c</summarizedField>
        <summaryForeignKey>AF_Bonus_Matrix__c.AF_Bonus_Results__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AF_Bonus_overall__c</fullName>
        <label>AF_Bonus_overall%</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AF_BonusableFees__c</fullName>
        <label>AF_BonusableFees</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Bonusable_Fees__c</fullName>
        <description>Stores the Bonusable Fee from Base Fee based on tradition, digital</description>
        <label>Bonusable Fees</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Digital__c</fullName>
        <description>to store total digital value from agency estimates while record is submitted(locked)</description>
        <label>Digital</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_IsPilotModel__c</fullName>
        <description>Stores whether Brand Estimate is Pilot Model or Not</description>
        <formula>AF_Bonus_Thresholds__r.AF_Pilot_Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsPilotModel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>AgencyFee#GLOBAL#To store the status for Bonus Results</description>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_Period__c</fullName>
        <description>AgencyFee#GLOBAL#To store the period values.</description>
        <label>Period</label>
        <picklist>
            <picklistValues>
                <fullName>Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AF_Qual_Bonus_Value__c</fullName>
        <description>Stores the Qual Bonus Value</description>
        <label>Qual Bonus Value</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Qual_Per__c</fullName>
        <description>Stores the Qual %</description>
        <label>Qual Bonus%</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AF_Qual__c</fullName>
        <description>AgencyFee#GLOBAL#To store Qual values</description>
        <label>Qual</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Quant_Bonus_Value__c</fullName>
        <description>AgencyFee#GLOBAL#To Store the Quant Bonus related values</description>
        <label>Quant Bonus Value</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Quant_Bonus__c</fullName>
        <description>AgencyFee#GLOBAL#To Store the Quant Bonus related values</description>
        <label>Quant Bonus %</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AF_Quant__c</fullName>
        <description>AgencyFee#GLOBAL#To store the Quant values</description>
        <label>Quant</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Remuneration_Percentage__c</fullName>
        <description>Stores the % used for Pilot Model</description>
        <label>Remuneration Percentage</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Remuneration_Rating__c</fullName>
        <description>Stores the rating used for Pilot Model</description>
        <label>Remuneration Rating</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Status__c</fullName>
        <description>AgencyFee#GLOBAL#To Store status for Bonus Result</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AF_Sum_of_Bounsable_fees__c</fullName>
        <description>to store total bonusable fees value from agency estimates while record is submitted(locked)</description>
        <label>Sum of Bounsable fees</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Total_Bonus_Value__c</fullName>
        <description>AgencyFee#GLOBAL#To Store the Total Bonus Values</description>
        <label>Total Bonus Value</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Total_Bonus__c</fullName>
        <description>AgencyFee#GLOBAL#To Store the Total Bonus related values</description>
        <label>Total Bonus %</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AF_Total_Remuneration__c</fullName>
        <description>Stores Total remuneration bonus that is calculated</description>
        <label>Total Remuneration</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Total_bonus_fees__c</fullName>
        <description>Stores Total bonus fees from brand estimate</description>
        <label>Total bonus fees</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_of_Bonus_Matrix__c</fullName>
        <description>This is used to store number of Bonus Matrix records which are related to Bonus Result.</description>
        <label># of Bonus Matrix</label>
        <summaryForeignKey>AF_Bonus_Matrix__c.AF_Bonus_Results__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AF_totalBonus__c</fullName>
        <label>AF_totalBonus</label>
        <summarizedField>AF_Bonus_Matrix__c.AF_BonusableFee__c</summarizedField>
        <summaryForeignKey>AF_Bonus_Matrix__c.AF_Bonus_Results__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IDfromPilot__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>IDfromPilot</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Real_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Real ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Traditional__c</fullName>
        <description>to store total traditional value from agency estimates while record is submitted(locked)</description>
        <label>Traditional</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Bonus Results</label>
    <listViews>
        <fullName>All</fullName>
        <columns>AF_Locked__c</columns>
        <columns>AF_Bonus_Thresholds__c</columns>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>AF_Bonusable_Fees__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BR-{00000000}</displayFormat>
        <label>Bonus Results Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bonus Results</pluralLabel>
    <recordTypes>
        <fullName>Bonus_Annual</fullName>
        <active>true</active>
        <label>Bonus Annual</label>
    </recordTypes>
    <recordTypes>
        <fullName>Bonus_Quarterly</fullName>
        <active>true</active>
        <label>Bonus Quarterly</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>